# nRF-Connect-SDK-Demo

./: .gitignore  README.en.md  README.md  test_file.txt
0_project/: README.md  project.vsdx  ~$$project.~vsdx
10_rtc/: README.md  prj.conf  readme_en.md
10_rtc/src/: main.c
1_led/: README.rst
1_led/src/: main.c
2_key/: README.rst
2_key/src/: main.c
3_uart/uart_zephyr/: README.md
3_uart/uart_zephyr_irq/: CMakeLists.txt  prj.conf
4_adc/nrf_adc/: CMakeLists.txt  README.md  prj.conf
6_spi/nrf_spi/: CMakeLists.txt  prj.conf
7_i2s/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
7_i2s/src/: main.c
8_pwm/: prj.conf  readme.md  readme_en.md
8_pwm/src/: main.c
9_timer/: prj.conf  readme.md  readme_en.md
A0_log/: README.md  prj.conf
A0_log/src/: main.c
A1_include/: CMakeLists.txt  README.md
A1_include/src/: main.c
A1_include/src/test_1/: sum.c
A1_include/src/test_2/: func_b.c
A1_include/src/test_2/include/: func_a.h  func_b.h
Appliance/esb/: CMakeLists.txt
Appliance/rotary_encoder/: CMakeLists.txt  readme.md
C0_RTT/: README.rst  prj.conf
C1_JScope/: prj.conf
C1_JScope/src/: main.c
C2_Systemview/: README.md
C2_Systemview/src/: main.c
D2_thread_semaphores/: README.md  README_en.md  prj.conf
D2_thread_semaphores/src/: main.c
D4_ring_buffer/: CMakeLists.txt  README.md  README_en.md  prj.conf
D4_ring_buffer/ring_buf/: prj.conf
D5_workqueue/workqueue/: README.md  README_en.md
D5_workqueue/workqueue_uart/: CMakeLists.txt  README.md  README_en.md
Peripherals/0_project/: README_en.md
Tools/A1_CMake/: prj.conf
(+163 files in other folders)
